--- a/configure.ac
+++ b/configure.ac
@@ -6,6 +6,7 @@ AC_CONFIG_SRCDIR([autogen.sh])
 dnl
 AM_PROG_LIBTOOL
 dnl AC_CONFIG_AUX_DIR()
+AC_CONFIG_MACRO_DIR([m4])
 dnl
 dnl 
 AH_TEMPLATE(HAVE_SINCOS)
