--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -9,7 +9,7 @@ PYTHON_TESTS = alltests.py
 
 TESTS = $(CPP_TESTS) $(PYTHON_TESTS)
 
-TESTS_ENVIRONMENT = PYTHONPATH=$(top_srcdir)
+TESTS_ENVIRONMENT = PYTHONPATH=$(top_srcdir):$(PYTHONPATH)
 
 
 EXTRA_DIST=\
