Fixed cylinder detection in object_matrix. Added tests. Split-up egfrd.py. Added planar planes and CylindricalSingle2D.
Everything works.

--- a/object_matrix/tests/Makefile
+++ b/object_matrix/tests/Makefile
@@ -3,7 +3,7 @@ CPPFLAGS=-I$(SRCDIR)
 CXXFLAGS=-g -Werror
 LDFLAGS=
 
-all: vmap_test object_container_test array_helper_test filters_test position_test
+all: vmap_test object_container_test cylinder_container_test array_helper_test filters_test position_test
 
 clean:
 	rm -f *.o *.so *.lo *.loT
@@ -20,6 +20,9 @@ vmap_test: vmap_test.cpp $(SRCDIR)/vmap.hpp
 object_container_test: object_container_test.cpp $(SRCDIR)/object_container.hpp
 	$(CXX) $(CPPFLAGS) $(CXXFLAGS) $(LDFLAGS) -o $@ object_container_test.cpp
 
+cylinder_container_test: cylinder_container_test.cpp $(SRCDIR)/object_container.hpp
+	$(CXX) $(CPPFLAGS) $(CXXFLAGS) $(LDFLAGS) -o $@ cylinder_container_test.cpp
+
 array_helper_test: array_helper_test.cpp $(SRCDIR)/array_helper.hpp
 	$(CXX) $(CPPFLAGS) $(CXXFLAGS) $(LDFLAGS) -o $@ array_helper_test.cpp
 
@@ -29,4 +32,4 @@ filters_test: filters_test.cpp $(SRCDIR)/filters.hpp $(SRCDIR)/object_container.
 position_test: position_test.cpp $(SRCDIR)/position.hpp
 	$(CXX) $(CPPFLAGS) $(CXXFLAGS) $(LDFLAGS) -o $@ position_test.cpp
 
-.PHONY: all clean
+.PHONY: all clean 
