Call right Green's functions for 2D case + interactions.
Sort of works. Todo: 1D pairs + interactions domainsize.

--- a/samples/Makefile
+++ b/samples/Makefile
@@ -8,7 +8,7 @@ DATA=data/run/files.pvd data/run/files/*
 .PHONY: bd
 bd:
 	echo
-	#cd bd_test && rm -rf $(DATA) && LOGLEVEL=ERROR PYTHONPATH=${PYTHONPATH}:../../ python irr.py data/output.out 0.000001 1
+	cd bd_test && rm -rf $(DATA) && LOGLEVEL=ERROR PYTHONPATH=${PYTHONPATH}:../../ python irr.py data/output.out 0.000001 1
 
 .PHONY: cylinders
 cylinders:
