VTKLogger uses a buffer to only write last 'bufferSize' steps to file.
modified:   egfrd.py
modified:   samples/Makefile
modified:   samples/cylinders/run.py
modified:   vtk_xml_serial_unstructured.py
modified:   vtklogger.py

--- a/samples/Makefile
+++ b/samples/Makefile
@@ -3,7 +3,7 @@
 .PHONY: all
 all : bd gfrd hardbody irreversible mapk pushpull rebind reversible tf
 
-DATA=data/run/files.pvd data/run/files/*
+DATA=data/run/files.pvd data/run/static.pvd data/run/files/
 
 .PHONY: bd
 bd:
