Add 'make clean' to doc/greens_functions/Makefile.

--- a/doc/greens_functions/Makefile
+++ b/doc/greens_functions/Makefile
@@ -2,3 +2,6 @@
 .PHONY: all
 all:
 	cd tex && $(MAKE) $(MKFLAGS) && cd ../ && mv -f build/*.pdf .
+
+clean:
+	rm -rf build/*.aux build/*.log build/include/*.aux build/include/*.log *.pdf
